tests/NormalTests/paczka1/fuzzy1/25356291.err
Error in line 1: 7hp3 S614 80,5
Error in line 5: 5RuAs A564 74,9
Error in line 13: 8DV S614 2,78
Error in line 6: 5RuAs S614 12,1
Error in line 14: QZY A58 72,3
Error in line 21: QZY A895 48,6
Error in line 30: 0RuAs A064 46,0
Error in line 15: 5RuAs A895 36,1
Error in line 29: 7hp3 A564 82,1
